--- a/continuum-web/src/main/resources/WEB-INF/web.xml
+++ b/continuum-web/src/main/resources/WEB-INF/web.xml
@@ -6,6 +6,11 @@
 
 <web-app>
   <servlet>
+    <servlet-name>browse</servlet-name>
+    <servlet-class>org.apache.maven.continuum.web.servlet.DownloadServlet</servlet-class>
+    <load-on-startup>6</load-on-startup>
+  </servlet>
+  <servlet>
     <servlet-name>continuum</servlet-name>
     <servlet-class>org.codehaus.plexus.summit.Summit</servlet-class>
     <load-on-startup>5</load-on-startup>
@@ -19,6 +24,10 @@
     </servlet-class>
   </servlet>
   -->
+  <servlet-mapping>
+    <servlet-name>browse</servlet-name>
+    <url-pattern>/continuum/browse</url-pattern>
+  </servlet-mapping>
   <servlet-mapping>
     <servlet-name>continuum</servlet-name>
     <url-pattern>/continuum/*</url-pattern>
