--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,16 @@
     <module>continuum-web</module>
     <module>continuum-xmlrpc</module>
   </modules>
+  <repositories>
+    <repository>
+      <releases>
+        <enabled>false</enabled>
+      </releases>
+      <id>snapshots</id>
+      <name>Maven Central Development Repository</name>
+      <url>http://snapshots.maven.codehaus.org/maven2</url>
+    </repository>
+  </repositories>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
