--- a/pom.xml
+++ b/pom.xml
@@ -312,7 +312,7 @@
       <dependency>
         <groupId>org.codehaus.plexus</groupId>
         <artifactId>plexus-formica</artifactId>
-        <version>1.0-beta-9</version>
+        <version>1.0-beta-10-SNAPSHOT</version>
       </dependency>
       <dependency>
         <groupId>org.codehaus.plexus</groupId>
