--- a/pom.xml
+++ b/pom.xml
@@ -100,27 +100,27 @@
       <dependency>
         <groupId>org.apache.maven</groupId>
         <artifactId>maven-core</artifactId>
-        <version>2.0.3-SNAPSHOT</version>
+        <version>2.0.3</version>
       </dependency>
       <dependency>
         <groupId>org.apache.maven</groupId>
         <artifactId>maven-model</artifactId>
-        <version>2.0.3-SNAPSHOT</version>
+        <version>2.0.3</version>
       </dependency>
       <dependency>
         <groupId>org.apache.maven</groupId>
         <artifactId>maven-artifact</artifactId>
-        <version>2.0.3-SNAPSHOT</version>
+        <version>2.0.3</version>
       </dependency>
       <dependency>
         <groupId>org.apache.maven</groupId>
         <artifactId>maven-project</artifactId>
-        <version>2.0.3-SNAPSHOT</version>
+        <version>2.0.3</version>
       </dependency>
       <dependency>
         <groupId>org.apache.maven</groupId>
         <artifactId>maven-settings</artifactId>
-        <version>2.0.3-SNAPSHOT</version>
+        <version>2.0.3</version>
       </dependency>
       <dependency>
         <groupId>org.apache.maven.scm</groupId>
