--- a/gbuild-agent-application/pom.xml
+++ b/gbuild-agent-application/pom.xml
@@ -1,13 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!--
+    Copyright 2006 The Apache Software Foundation
 
-<!-- $Id$ -->
+    Licensed under the Apache License, Version 2.0 (the "License");
+    you may not use this file except in compliance with the License.
+    You may obtain a copy of the License at
 
-<project>
+       http://www.apache.org/licenses/LICENSE-2.0
+
+    Unless required by applicable law or agreed to in writing, software
+    distributed under the License is distributed on an "AS IS" BASIS,
+    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+    See the License for the specific language governing permissions and
+    limitations under the License.
+-->
+
+<!-- $Rev: 432902 $ $Date: 2006-08-19 16:42:35 -0700 (Sat, 19 Aug 2006) $ -->
+
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <artifactId>gbuild-parent</artifactId>
         <groupId>org.apache.geronimo.gbuild</groupId>
+        <artifactId>gbuild</artifactId>
         <version>1.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
@@ -15,77 +31,9 @@
     <artifactId>gbuild-agent-application</artifactId>
     <name>GBuild Agent Application</name>
     <packaging>plexus-application</packaging>
-
-    <build>
-        <plugins>
-            <plugin>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>assembly</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <descriptor>src/assembly/bin.xml</descriptor>
-                    <finalName>gbuild-agent-${pom.version}</finalName>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.plexus</groupId>
-                <artifactId>plexus-maven-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>runtime</goal>
-                            <goal>add-app</goal>
-                            <goal>add-services</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <applicationConfiguration>src/conf/application.xml</applicationConfiguration>
-                    <configurationsDirectory>src/conf</configurationsDirectory>
-                    <configurationProperties>${appProperties}</configurationProperties>
-                    <applicationName>gbuild-agent</applicationName>
-                    <runtimeConfiguration>src/test/conf/test-runtime-configuration.xml</runtimeConfiguration>
-                    <runtimeConfigurationProperties>${appProperties}</runtimeConfigurationProperties>
-                    <runtimePath>target/plexus-test-runtime</runtimePath>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
-
-    <profiles>
-        <profile>
-            <id>env-test</id>
-            <activation>
-                <activeByDefault>true</activeByDefault>
-                <property>
-                    <name>env</name>
-                    <value>test</value>
-                </property>
-            </activation>
-            <properties>
-                <appProperties>test.properties</appProperties>
-            </properties>
-        </profile>
-        <profile>
-            <id>env-production</id>
-            <activation>
-                <property>
-                    <name>env</name>
-                    <value>production</value>
-                </property>
-            </activation>
-            <properties>
-                <appProperties>app.properties</appProperties>
-            </properties>
-        </profile>
-    </profiles>
-
+    
     <dependencies>
+        
         <dependency>
             <groupId>${pom.groupId}</groupId>
             <artifactId>gbuild-agent</artifactId>
@@ -138,5 +86,83 @@
             <artifactId>maven-artifact</artifactId>
             <version>2.0-1</version>
         </dependency>
+        
     </dependencies>
+    
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>attached</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <descriptor>${pom.basedir}/src/assembly/bin.xml</descriptor>
+                    <finalName>gbuild-agent-${pom.version}</finalName>
+                </configuration>
+            </plugin>
+            
+            <plugin>
+                <groupId>org.codehaus.plexus</groupId>
+                <artifactId>plexus-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>runtime</goal>
+                            <goal>add-app</goal>
+                            <goal>add-services</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <applicationConfiguration>${pom.basedir}/src/conf/application.xml</applicationConfiguration>
+                    <configurationsDirectory>${pom.basedir}/src/conf</configurationsDirectory>
+                    <configurationProperties>${appProperties}</configurationProperties>
+                    <applicationName>gbuild-agent</applicationName>
+                    <runtimeConfiguration>${pom.basedir}/src/test/conf/test-runtime-configuration.xml</runtimeConfiguration>
+                    <runtimeConfigurationProperties>${appProperties}</runtimeConfigurationProperties>
+                    <runtimePath>${pom.basedir}/target/plexus-test-runtime</runtimePath>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
+    <profiles>
+        <profile>
+            <id>env-test</id>
+            
+            <activation>
+                <activeByDefault>true</activeByDefault>
+                <property>
+                    <name>env</name>
+                    <value>test</value>
+                </property>
+            </activation>
+            
+            <properties>
+                <appProperties>test.properties</appProperties>
+            </properties>
+        </profile>
+        
+        <profile>
+            <id>env-production</id>
+            
+            <activation>
+                <property>
+                    <name>env</name>
+                    <value>production</value>
+                </property>
+            </activation>
+            
+            <properties>
+                <appProperties>app.properties</appProperties>
+            </properties>
+        </profile>
+    </profiles>
+    
 </project>
