--- a/gbuild-agent-web/pom.xml
+++ b/gbuild-agent-web/pom.xml
@@ -1,23 +1,38 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!--
+    Copyright 2006 The Apache Software Foundation
 
-<!-- $Id$ -->
+    Licensed under the Apache License, Version 2.0 (the "License");
+    you may not use this file except in compliance with the License.
+    You may obtain a copy of the License at
 
-<project>
+       http://www.apache.org/licenses/LICENSE-2.0
+
+    Unless required by applicable law or agreed to in writing, software
+    distributed under the License is distributed on an "AS IS" BASIS,
+    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+    See the License for the specific language governing permissions and
+    limitations under the License.
+-->
+
+<!-- $Rev: 432902 $ $Date: 2006-08-19 16:42:35 -0700 (Sat, 19 Aug 2006) $ -->
+
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
         <groupId>org.apache.geronimo.gbuild</groupId>
-        <artifactId>gbuild-parent</artifactId>
+        <artifactId>gbuild</artifactId>
         <version>1.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>gbuild-agent-web</artifactId>
     <name>GBuild Agent Webapp</name>
-    <packaging>jar</packaging>
-    <url>http://geronimo.apache.org</url>
 
     <dependencies>
+        
         <dependency>
             <groupId>${pom.groupId}</groupId>
             <artifactId>gbuild-agent</artifactId>
@@ -71,5 +86,7 @@
             <groupId>org.apache.geronimo.specs</groupId>
             <artifactId>geronimo-servlet_2.4_spec</artifactId>
         </dependency>
+        
     </dependencies>
+    
 </project>
