--- a/pom.xml
+++ b/pom.xml
@@ -1,65 +1,55 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!--
+    Copyright 2006 The Apache Software Foundation
 
-<!-- $Id$ -->
+    Licensed under the Apache License, Version 2.0 (the "License");
+    you may not use this file except in compliance with the License.
+    You may obtain a copy of the License at
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+       http://www.apache.org/licenses/LICENSE-2.0
 
+    Unless required by applicable law or agreed to in writing, software
+    distributed under the License is distributed on an "AS IS" BASIS,
+    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+    See the License for the specific language governing permissions and
+    limitations under the License.
+-->
+
+<!-- $Rev: 432902 $ $Date: 2006-08-19 16:42:35 -0700 (Sat, 19 Aug 2006) $ -->
+
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    
     <modelVersion>4.0.0</modelVersion>
+    
+    <parent>
+        <groupId>org.apache.geronimo.genesis.config</groupId>
+        <artifactId>project-config</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
+    </parent>
+    
     <groupId>org.apache.geronimo.gbuild</groupId>
-    <artifactId>gbuild-parent</artifactId>
+    <artifactId>gbuild</artifactId>
+    <name>GBuild</name>
     <packaging>pom</packaging>
-    <name>GBuild Parent Project</name>
+    
     <version>1.0-SNAPSHOT</version>
-
+    
+    <description>
+        GBuild provides a framework for build distribution and result collection.
+    </description>
+    
+    <scm>
+        <connection>scm:svn:http://svn.apache.org/repos/asf/geronimo/gbuild/trunk/</connection>
+        <developerConnection>scm:svn:https://${maven.username}@svn.apache.org/repos/asf/geronimo/gbuild/trunk/</developerConnection>
+        <url>http://svn.apache.org/viewvc/geronimo/gbuild/trunk/</url>
+    </scm>
+    
     <issueManagement>
         <system>jira</system>
-        <url>http://issues.apache.org/jira/browse/GERONIMO</url>
+        <url>http://issues.apache.org/jira/browse/GBUILD</url>
     </issueManagement>
 
-    <ciManagement>
-        <system>continuum</system>
-        <url>http://ci.gbuild.org/continuum</url>
-        <notifiers>
-            <notifier>
-                <configuration>
-                    <address>scm@geronimo.apache.org</address>
-                </configuration>
-            </notifier>
-        </notifiers>
-    </ciManagement>
-
     <inceptionYear>2005</inceptionYear>
-
-    <mailingLists>
-        <mailingList>
-            <name>GBuild Dev List</name>
-            <subscribe>dev-subscribe@geronimo.apache.org</subscribe>
-            <unsubscribe>dev-unsubscribe@geronimo.apache.org</unsubscribe>
-            <archive>http://mail-archives.apache.org/mod_mbox/geronimo-dev/</archive>
-        </mailingList>
-        <mailingList>
-            <name>GBuild User List</name>
-            <subscribe>users-subscribe@geronimo.apache.org</subscribe>
-            <unsubscribe>users-unsubscribe@geronimo.apache.org</unsubscribe>
-            <archive>http://mail-archives.apache.org/mod_mbox/geronimo-users/</archive>
-        </mailingList>
-        <mailingList>
-            <name>Apache Announce List</name>
-            <subscribe>announce-subscribe@apache.org</subscribe>
-            <unsubscribe>announce-unsubscribe@apache.org</unsubscribe>
-            <post>announce@apache.org</post>
-            <archive>mail-archives.apache.org/mod_mbox/www-announce/</archive>
-        </mailingList>
-    </mailingLists>
-
-    <licenses>
-        <license>
-            <name>The Apache Software License, Version 2.0</name>
-            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-            <distribution>repo</distribution>
-        </license>
-    </licenses>
 
     <developers>
         <developer>
@@ -73,6 +63,7 @@
             </roles>
             <timezone>-8</timezone>
         </developer>
+        
         <developer>
             <id>dain</id>
             <name>Dain Sundstrom</name>
@@ -85,121 +76,28 @@
             <timezone>-8</timezone>
         </developer>
     </developers>
-
-    <scm>
-        <connection>scm:svn:http://svn.apache.org/repos/asf/geronimo/gbuild/trunk/</connection>
-        <developerConnection>scm:svn:http://svn.apache.org/repos/asf/geronimo/gbuild/trunk/</developerConnection>
-        <url>http://svn.apache.org/viewcvs.cgi/geronimo/gbuild/trunk/</url>
-    </scm>
-    <organization>
-        <name>Apache</name>
-        <url>http://www.apache.org/</url>
-    </organization>
-
-    <build>
-        <defaultGoal>install</defaultGoal>
-
-        <plugins>
-            <plugin>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>1.4</source>
-                    <target>1.4</target>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.plexus</groupId>
-                <artifactId>plexus-maven-plugin</artifactId>
-                <version>1.1</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>descriptor</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-
-        <pluginManagement>
-            <plugins>
-                <plugin>
-                    <groupId>org.codehaus.plexus</groupId>
-                    <artifactId>plexus-maven-plugin</artifactId>
-                    <version>1.1.1</version>
-                    <extensions>true</extensions>
-                </plugin>
-                <plugin>
-                    <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.1.3</version>
-                </plugin>
-            </plugins>
-        </pluginManagement>
-    </build>
-
-    <modules>
-        <module>gbuild-agent</module>
-        <module>gbuild-agent-web</module>
-        <module>gbuild-report</module>
-        <module>extensions</module>
-        <module>gbuild-agent-application</module>
-    </modules>
-
-    <repositories>
-        <repository>
-            <id>apache</id>
-            <name>Apache Repository</name>
-            <url>http://cvs.apache.org/repository</url>
-            <layout>legacy</layout>
-        </repository>
-        <repository>
-            <id>dblevins</id>
-            <name>Tmp Apache Repository</name>
-            <url>http://people.apache.org/~dblevins/maven</url>
-            <layout>legacy</layout>
-        </repository>
-        <repository>
-            <releases>
-                <enabled>false</enabled>
-            </releases>
-            <id>snapshots</id>
-            <name>Maven Snapshot Development Repository</name>
-            <url>http://snapshots.maven.codehaus.org/maven2</url>
-        </repository>
-        <repository>
-            <id>codehaus</id>
-            <name>Codehaus Repository</name>
-            <url>http://repository.codehaus.org</url>
-        </repository>
-    </repositories>
-    <pluginRepositories>
-        <pluginRepository>
-            <releases>
-                <enabled>false</enabled>
-            </releases>
-            <id>snapshots</id>
-            <name>Maven Central Plugins Development Repository</name>
-            <url>http://snapshots.maven.codehaus.org/maven2</url>
-        </pluginRepository>
-    </pluginRepositories>
-
+    
     <dependencyManagement>
         <dependencies>
+            
             <dependency>
                 <groupId>log4j</groupId>
                 <artifactId>log4j</artifactId>
                 <version>1.2.8</version>
             </dependency>
+            
             <dependency>
                 <groupId>concurrent</groupId>
                 <artifactId>concurrent</artifactId>
                 <version>1.3.4</version>
             </dependency>
+            
             <dependency>
                 <groupId>org.apache.maven.continuum</groupId>
                 <artifactId>continuum-api</artifactId>
                 <version>1.0.2</version>
             </dependency>
+            
             <dependency>
                 <groupId>org.apache.maven.continuum</groupId>
                 <artifactId>continuum-core</artifactId>
@@ -215,55 +113,184 @@
                     </exclusion>
                 </exclusions>
             </dependency>
+            
             <dependency>
                 <groupId>org.apache.maven.continuum</groupId>
                 <artifactId>continuum-model</artifactId>
                 <version>1.0.2</version>
             </dependency>
+            
             <dependency>
                 <groupId>org.codehaus.plexus</groupId>
                 <artifactId>plexus-command-line</artifactId>
                 <version>1.0-alpha-2</version>
             </dependency>
+            
             <dependency>
                 <groupId>org.apache.maven.scm</groupId>
                 <artifactId>maven-scm-provider-cvs</artifactId>
                 <version>1.0-beta-2</version>
             </dependency>
+            
             <dependency>
                 <groupId>incubator-activemq</groupId>
                 <artifactId>activemq-core</artifactId>
                 <version>4.0-RC3</version>
             </dependency>
+            
             <dependency>
                 <groupId>org.apache.geronimo.specs</groupId>
                 <artifactId>geronimo-jms_1.1_spec</artifactId>
                 <version>1.0</version>
             </dependency>
+            
             <dependency>
                 <groupId>org.apache.geronimo.specs</groupId>
                 <artifactId>geronimo-j2ee-management_1.0_spec</artifactId>
                 <version>1.0</version>
             </dependency>
+            
             <dependency>
                 <groupId>org.apache.geronimo.specs</groupId>
                 <artifactId>geronimo-servlet_2.4_spec</artifactId>
                 <version>1.0</version>
             </dependency>
+            
             <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
                 <version>3.8.1</version>
                 <scope>test</scope>
             </dependency>
+            
         </dependencies>
     </dependencyManagement>
 
     <dependencies>
+        
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
         </dependency>
+        
     </dependencies>
+    
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.codehaus.plexus</groupId>
+                    <artifactId>plexus-maven-plugin</artifactId>
+                    <version>1.1.1</version>
+                    <extensions>true</extensions>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+        
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.4</source>
+                    <target>1.4</target>
+                </configuration>
+            </plugin>
+            
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-idea-plugin</artifactId>
+                <configuration>
+                    <jdkName>1.4</jdkName>
+                    <linkModules>true</linkModules>
+                </configuration>
+            </plugin>
 
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <configuration>
+                    <tagBase>https://svn.apache.org/repos/asf/geronimo/gbuild/tags</tagBase>
+                </configuration>
+            </plugin>
+            
+            <plugin>
+                <groupId>org.codehaus.plexus</groupId>
+                <artifactId>plexus-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>descriptor</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+    
+    <repositories>
+        <!--
+        NOTE: The default repositories are picked up by Genesis, but need to
+              specify where Genesis lives to pick it up + any additional repositories.
+        -->
+        
+        <repository>
+            <id>apache-snapshots</id>
+            <name>Apache Snapshots Repository</name>
+            <url>http://people.apache.org/repo/m2-snapshot-repository</url>
+            <layout>default</layout>
+            <snapshots>
+                <enabled>true</enabled>
+                <updatePolicy>daily</updatePolicy>
+                <checksumPolicy>ignore</checksumPolicy>
+            </snapshots>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+        </repository>
+        
+        <!--
+        HACK: Need the Apache m1 snapshot repo to pick up incubator-activemq:*
+        -->
+        <repository>
+            <id>apache-snapshots-m1</id>
+            <name>Apache Maven 1 Snapshots Repository</name>
+            <url>http://people.apache.org/repo/m1-snapshot-repository</url>
+            <layout>legacy</layout>
+            <snapshots>
+                <enabled>true</enabled>
+                <updatePolicy>daily</updatePolicy>
+                <checksumPolicy>ignore</checksumPolicy>
+            </snapshots>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+        </repository>
+    </repositories>
+    
+    <distributionManagement>
+        <site>
+            <id>geronimo-website</id>
+            <url>scp://people.apache.org/www/geronimo.apache.org/maven/gbuild</url>
+        </site>
+    </distributionManagement>
+    
+    <profiles>
+        <profile>
+            <id>default</id>
+
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            
+            <modules>
+                <module>gbuild-agent</module>
+                <module>gbuild-agent-web</module>
+                <module>gbuild-report</module>
+                <module>extensions</module>
+                <module>gbuild-agent-application</module>
+            </modules>
+        </profile>
+    </profiles>
+    
 </project>
